# bufr-query

./: .readthedocs.yaml  CMakeLists.txt
core/: CMakeLists.txt
core/include/bufr/: DataContainer.h  DataObject.h  DataProvider.h  ResultSet.h
core/include/bufr/encoders/: Description.h  EncoderBase.h
core/include/bufr/encoders/netcdf/: Encoder.h
core/src/bufr/: DataContainer.cpp  DataObjectBuilder.h
core/src/bufr/BufrReader/: BufrParser.cpp
core/src/bufr/BufrReader/Exports/Variables/: RemappedBrightnessTemperatureVariable.cpp  (+1 more)
core/src/bufr/BufrReader/Query/: ResultSet.cpp  ResultSetImpl.cpp  ResultSetImpl.h
core/src/encoders/: Description.cpp  EncoderBase.cpp
core/src/encoders/netcdf/: Encoder.cpp
docs/: conf.py  python_api.rst  software_architecture.rst  yaml.rst
docs/uml/: BUFR_EncoderClassDiagram.puml  BUFR_ObsBuilder.puml
python/: CMakeLists.txt  py_bufr.cpp  py_encoder_base.cpp  py_encoder_description.cpp  py_mpi.cpp  py_mpi.h  py_netcdf_encoder.cpp  py_parser.cpp
python/bufr/encoders/: __init__.py
python/bufr/encoders/zarr/: encoder.py
python/bufr/obs_builder/: __init__.py  logger.py  obs_builder.py
test/: CMakeLists.txt
test/testinput/: bufrtest_amua_n15_mapping.yaml  bufrtest_amua_ta_mapping.yaml  bufrtest_atms_mapping.yaml  bufrtest_dim_labels_mapping.yaml  bufrtest_esamua_mapping.yaml  bufrtest_mtiasi_mapping.yaml  bufrtest_python_mpi_test.py  bufrtest_python_test.py
tools/: CMakeLists.txt
tools/bufr2netcdf/: bufr2netcdf.cpp
tools/bufr2zarr/: CMakeLists.txt  bufr2zarr.py
tools/build_scripts/: bufr_comp.sh
(+9 files in other folders)
